<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hpipm</name>
  <version>0.0.0</version>
  <description>ocs2_core of ros2</description>
  <maintainer email="957278968@qq.com">HenningHe</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>blasfeo</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
